# Flock

./: .dockerignore  .gitignore  .gitmodules  Dockerfile embeddings_loader  Dockerfile.agent  Dockerfile.deployer  Dockerfile.embeddings_loader  Dockerfile.flock  Dockerfile.flock_base  Dockerfile.observer  Dockerfile.poetry  Dockerfile.python.base  Dockerfile.resources  Dockerfile.resources_server  Dockerfile.webscraper  F_ARCH.excalidraw  F_GUI.excalidraw  MAKEFILE.md  Makefile  Presentation.md  README.md  Thoughts.md  pyproject.toml  sleep_pod.yaml  test-index.html
flock_agent/: .gitignore  Dockerfile  Dockerfile.agent  Makefile  README.md  poetry.toml  pyproject.toml
flock_agent/.documentation_vectorstore/: chroma-collections.parquet
flock_agent/flock_agent/: agent.py  main.py  models.py  routes.py  task handler.py
flock_agent/tests/: agent_schema.json  test_app.py
flock_agent/tests/schemas/: agent.json
flock_api_server/: .gitignore  Makefile  README.md  pyproject.toml
flock_api_server/generator/server/: docker-compose.yaml  openapi.yaml  setup.cfg
flock_api_server/server/: main.py  security_api.py
flock_api_server/server/api/: deploy_api.py  flock_api.py
flock_api_server/server/apis/: default_api.py  flock_api.py
flock_api_server/server/endpoints/: put.py
flock_api_server/server/middleware/: validation.py
flock_api_server/server/models/: agent_schema.py  agent_schema_metadata.py  agent_spec.py  base_meta_data.py  base_spec.py  code.py  code1.py  code3.py  code5.py  custom_schema.py  embedding_spec.py  embedding_vendor.py  internal_server_error1.py  llm_schema.py  llm_schema_spec.py  llm_spec.py  load_tool_schema.py  load_tool_vendor.py  prompt_template_schema.py  prompt_template_schema_spec.py  prompt_template_vendor.py  resource_already_exists1.py  resource_bad_request1.py  resource_data.py  resource_deleted.py  resource_deleted_data.py  resource_details.py  resource_fetched.py  resource_updated.py  splitter_schema_spec.py  splitter_spec.py  status.py  status1.py  status_code.py  vector_store_qa_tool_schema.py  vector_store_qa_tool_schema_spec.py  vector_store_schema.py  vector_store_schema_spec.py
flock_api_server/tests/: test_default_api.py  test_flock_api.py  test_main.py
flock_common/: pyproject.toml
flock_common/flock_common/: __init__.py  base_schemas.py  env_checker.py  queue_client.py  validation.py
flock_common/tests/: test_vault.py
flock_controller/: pyproject.toml
flock_controller/flock_controller/: embedding.py  vectorstore.py
flock_controller/flock_controller/models/: base.py  embedding.py  llm.py
flock_models/: .env  .gitignore  Makefile  README.md  pyproject.toml
flock_models/flock_models/builder/: __init__.py  builder.py  manifest_builder.py  (+3 more)
flock_models/plugins/: BabyAGI.py  __init__.py  baby_agi.py
flock_models/scripts/: openapi_sync.py
flock_models/tests/: resources_validation.py  schemas_validation.py  test_integration.py  validate.py
flock_pypi/: Makefile  pyproject.toml
flock_pypi/flock_pypi/: flock_agent-0.0.1-py3-none-any.whl  flock_resource_store-0.0.1-py3-none-any.whl  flock_schemas-0.0.1-py3-none-any.whl  flock_secrets_store-0.0.1-py3-none-any.whl
flock_resource_store/: .gitignore  Makefile  pyproject.toml
flock_resource_store/flock_resource_store/: __init__.py  base.py  etcd.py  fs.py  mongo.py
flock_resource_store/tests/: test_mongo_resource_store.py
flock_resources/: pyproject.toml
flock_resources/plugins/: baby_agi.py
flock_resources/scripts/: write_json_schemas.py
flock_resources/tests/: resources_validation.py  schemas_validation.py  test_mongo_resource_store.py
flock_schemas/: .gitignore  Makefile  README.md  pyproject.toml
flock_schemas/flock_schemas/: __init__.py  __init__.pyi  agent.py  agent.pyi  base.py  base.pyi  card.py  custom.py  custom.pyi  dependencies.py  dependencies.pyi  deployment.py  embedding.py  embedding.pyi  embeddings_loader.py  etl.py  job.py  llm.py  llm.pyi  llm_chat.py  llm_tool.py  llm_tool.pyi  load_tool.py  load_tool.pyi  prompt_template.py  prompt_template.pyi  search_tool.py  splitter.py  splitter.pyi  vector_store.py  vectorstore.py  vectorstore.pyi  vectorstore_qa_tool.py  vectorstore_qa_tool.pyi  vectorstore_retriever_tool.py  web_scraper.py
flock_schemas/scripts/: openapi_sync.py
flock_schemas/tests/: schemas_validation.py  validate.py
flock_secrets_store/: .gitignore  pyproject.toml
flock_secrets_store/flock_secrets_store/: __init__.py  base.py  vault.py
flock_secrets_store/tests/: test_vault.py
flock_store/: .gitignore  pyproject.toml
flock_task_management_store/: pyproject.toml
flock_task_management_store/flock_task_management_store/: base.py  mongo.py  ticket_schema.py
flock_ticket_ingester/: Makefile  README.md  pyproject.toml
flock_ticket_ingester/flock_ticket_ingester/: main.py  routes.py  trello_client.py
flock_webscraper/: .gitignore  Dockerfile  Makefile  config_example.json  pyproject.toml
flock_webscraper/flock_webscraper/: __init__.py  env_checker.py  flock_spider.py  run_scraper.py  scrapy.cfg
flock_webscraper/tests/: test_run_spider.py
libs/flock_config_store/: pyproject.toml
libs/flock_resource_store/: pyproject.toml
libs/flock_resources/: Makefile  README.md  launch.json.template  pyproject.toml
libs/flock_schemas/: .gitignore  Makefile  pyproject.toml
libs/flock_task_management_store/: pyproject.toml
services/flock_agent/: .gitignore  .pylintrc  Makefile  agent.spec  launch.json.template  main.spec  pyproject.toml  pytest.ini
services/flock_client/: README.md  launch.json.template  pyproject.toml
services/flock_deployer/: .env.template  .gitignore  .pytest.ini  Makefile  README.md  launch.json.template  pyproject.toml
services/flock_embeddings_loader/: .gitignore  launch.json.template  pyproject.toml
services/flock_init/: pyproject.toml
services/flock_observer/: pyproject.toml
services/flock_resources_server/: .env.template  .pytest.ini  Makefile  README.md  launch.json.template  pyproject.toml
services/flock_task_manager/: launch.json.template  pyproject.toml
(+875 files in other folders)
