[tool.poetry]
name = "flock-agent"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_agent"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pydantic = "^1.10.7"
click = "^8.1.3"
fastapi = {extras = ["all"], version = "^0.95.1"}
flock-models = {path = "../flock_models", develop = true}
flock-schemas = {path = "../flock_schemas", develop = true}
flock-resource-store = {path = "../flock_resource_store", develop = true}
websockets = "^11.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.2"
pytest = "^7.3.1"
nuitka = "^1.5.7"
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
