[tool.poetry]
name = "flock-api-server"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
include = ["server"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
