[tool.poetry]
name = "flock-common"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_common"}]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
