[tool.poetry]
name = "flock-models"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
pyyaml = "^6.0"
langchain = "^0.0.170"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
google-search-results = "^2.4.2"
openai = "^0.27.4"
faiss-cpu = "^1.7.3"
flock-resource-store = {path = "../flock_resource_store", develop = true}
flock-schemas = {path = "../flock_schemas", develop = true}
flock-common = {path = "../flock_common", develop = true}
odmantic = "^0.9.2"
python-dotenv = "^1.0.0"
pygpt4all = "^1.1.0"
wolframalpha = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
