[tool.poetry]
name = "flock-pypi"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_pypi"}]

[tool.poetry.dependencies]
python = "^3.9"
pypiserver = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
