[tool.poetry]
name = "flock-resource-store"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
include = ["flock_resource_store", "flock_resource_store/*"]

[tool.poetry.dependencies]
python = "^3.9"
python-etcd = "^0.4.5"
pyyaml = "^6.0"
pymongo = "^4.3.3"
flock-common = {path = "../flock_common", develop = true}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mongomock = "^4.1.2"
pytest = "^7.3.1"
pylint = "^2.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
