[tool.poetry]
name = "flock-schemas"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
include = ["scripts"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.7"
pyyaml = "^6.0"
datamodel-code-generator = "^0.18.0"
odmantic = "^0.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
