[tool.poetry]
name = "flock-store"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_store"}]

[tool.poetry.dependencies]
python = "^3.9"
flock-models = {path = "../flock_models"}
etcd3 = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
