[tool.poetry]
name = "flock-webscraper"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_webscraper"}]

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
