[tool.poetry]
name = "flock-schemas"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_schemas"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"
flock-common = {path = "../flock_common", develop = true}


[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
