[tool.poetry]
name = "flock-task-management-store"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_task_management_store"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
pydantic = "^1.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
