[tool.poetry]
name = "flock-client"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_client"}]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^3.30.0"
click = "^8.1.3"
flock-common = {path = "../flock_common", develop = true}
gpt4all = "^0.2.1"
fastapi = "^0.95.2"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
