[tool.poetry]
name = "flock-deployer"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_deployer"}]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^26.1.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
flock-common = {path = "../../libs/flock_common", develop = true}
flock-resources = {path = "../../libs/flock_resources", develop = true}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
