[tool.poetry]
name = "flock-embeddings-loader"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_embeddings_loader"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
python-dotenv = "^1.0.0"
flock-resources = {path = "../flock_resources", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
