[tool.poetry]
name = "flock-resources-server"
version = "0.0.1"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
flock-schemas = {path = "../../libs/flock_schemas", develop = true}
flock-resource-store = {path = "../../libs/flock_resource_store", develop = true}
flock-resources = {path = "../../libs/flock_resources", develop = true}
flock-common = {path = "../../libs/flock_common", develop = true}
python-dotenv = "^1.0.0"
pydantic = "==1.*"
fastapi = {extras = ["all"], version = "^0.99.1"}
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
