[tool.poetry]
name = "flock-task-manager"
version = "0.1.0"
description = ""
authors = ["Adam Yodinsky <27074934+adamyodinsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flock_task_manager"}]

[tool.poetry.dependencies]
python = "^3.9"
flock-common = {path = "../flock_common", develop = true}
fastapi = {extras = ["all"], version = "^0.95.2"}
python-dotenv = "^1.0.0"
flock-task-management-store = {path = "../flock_task_management_store", develop = true}
flock-schemas = {path = "../flock_schemas", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
